@@ -1,44 +1,42 @@
 (ns rems.test-performance
   (:require [clj-memory-meter.core :as mm]
+            [criterium.core :as criterium]
             [medley.core :refer [map-vals]]
             [mount.core :as mount]
             [rems.api.applications-v2 :as applications-v2]
             [rems.api.reviews :as reviews]
-            [rems.db.dynamic-roles :as dynamic-roles]))
+            [rems.db.dynamic-roles :as dynamic-roles])
+  (:import [java.util Locale]))
 
-(defn duration-millis [f]
-  (let [start (System/nanoTime)
-        _ (f)
-        end (System/nanoTime)]
-    (/ (- end start) 1000000.0)))
-
-(defn run-benchmark [benchmark iterations]
+(defn run-benchmark [benchmark]
+  (println "\n=====" (:name benchmark) "=====")
   ((:setup benchmark))
-  (doall (for [_ (range iterations)]
-           (duration-millis (:benchmark benchmark)))))
+  (let [result (criterium/with-progress-reporting
+                 (criterium/quick-benchmark ((:benchmark benchmark)) {}))]
+    (criterium/report-result result)
+    ;(clojure.pprint/pprint (dissoc result :results))
+    {:name (:name benchmark)
+     :mean (first (:mean result))
+     :high (first (:upper-q result))
+     :low (first (:lower-q result))}))
 
-(defn statistics [measurements]
-  (let [measurements (sort measurements)]
-    {:min (first measurements)
-     :median (nth measurements (quot (count measurements) 2))
-     :max (last measurements)}))
-
-(defn run-benchmarks [iterations benchmarks]
-  ;; warmup
-  (doseq [benchmark benchmarks]
-    (run-benchmark benchmark iterations))
-  ;; actual measurements
-  (doseq [benchmark benchmarks]
-    (let [measurements (run-benchmark benchmark iterations)]
-      (println (:name benchmark)
-               (->> (statistics measurements)
-                    (map-vals #(format "%.3fms" %)))))))
+(defn run-benchmarks [benchmarks]
+  (let [results (doall (for [benchmark benchmarks]
+                         (run-benchmark benchmark)))
+        longest-name (->> results (map :name) (map count) (apply max))
+        right-pad (fn [s length]
+                    (apply str s (repeat (- length (count s)) " ")))]
+    (println "\n===== Summary =====")
+    (doseq [result results]
+      (println (right-pad (:name result) longest-name)
+               (->> (select-keys result [:low :mean :high])
+                    (map-vals #(String/format Locale/ENGLISH "%.3f ms" (to-array [(* 1000 %)]))))))))
 
 (defn benchmark-get-all-applications []
   (let [test-get-all-unrestricted-applications #(doall (applications-v2/get-all-unrestricted-applications))
         test-get-all-applications #(doall (applications-v2/get-all-applications "alice"))
         test-get-own-applications #(doall (applications-v2/get-own-applications "alice"))
-        ;; developer can view much more applications than alice, so it takes longer to filter them
+        ;; developer can view much more applications than alice, so it takes longer to filter reviews from all apps
         test-get-open-reviews #(doall (reviews/get-open-reviews "developer"))
         no-cache (fn []
                    (mount/stop #'applications-v2/all-applications-cache))
@@ -46,21 +44,21 @@
                  (mount/stop #'applications-v2/all-applications-cache)
                  (mount/start #'applications-v2/all-applications-cache)
                  (test-get-all-unrestricted-applications))]
-    (run-benchmarks 5 [{:name "get-all-unrestricted-applications, no cache"
-                        :setup no-cache
-                        :benchmark test-get-all-unrestricted-applications}
-                       {:name "get-all-unrestricted-applications, cached"
-                        :setup cached
-                        :benchmark test-get-all-unrestricted-applications}
-                       {:name "get-all-applications, cached"
-                        :setup cached
-                        :benchmark test-get-all-applications}
-                       {:name "get-own-applications, cached"
-                        :setup cached
-                        :benchmark test-get-own-applications}
-                       {:name "get-open-reviews, cached"
-                        :setup cached
-                        :benchmark test-get-open-reviews}])
+    (run-benchmarks [{:name "get-all-unrestricted-applications, no cache"
+                      :setup no-cache
+                      :benchmark test-get-all-unrestricted-applications}
+                     {:name "get-all-unrestricted-applications, cached"
+                      :setup cached
+                      :benchmark test-get-all-unrestricted-applications}
+                     {:name "get-all-applications, cached"
+                      :setup cached
+                      :benchmark test-get-all-applications}
+                     {:name "get-own-applications, cached"
+                      :setup cached
+                      :benchmark test-get-own-applications}
+                     {:name "get-open-reviews, cached"
+                      :setup cached
+                      :benchmark test-get-open-reviews}])
     (println "cache size" (mm/measure applications-v2/all-applications-cache))))
 
 (defn benchmark-get-application []
@@ -71,12 +69,12 @@
                  (mount/stop #'applications-v2/application-cache)
                  (mount/start #'applications-v2/application-cache)
                  (test-get-application))]
-    (run-benchmarks 100 [{:name "get-application, no cache"
-                          :setup no-cache
-                          :benchmark test-get-application}
-                         {:name "get-application, cached"
-                          :setup cached
-                          :benchmark test-get-application}])
+    (run-benchmarks [{:name "get-application, no cache"
+                      :setup no-cache
+                      :benchmark test-get-application}
+                     {:name "get-application, cached"
+                      :setup cached
+                      :benchmark test-get-application}])
     (println "cache size" (mm/measure applications-v2/application-cache))))
 
 (defn benchmark-get-dynamic-roles []
@@ -87,15 +85,19 @@
                  (mount/stop #'dynamic-roles/dynamic-roles-cache)
                  (mount/start #'dynamic-roles/dynamic-roles-cache)
                  (test-get-roles))]
-    (run-benchmarks 5 [{:name "get-roles, no cache"
-                        :setup no-cache
-                        :benchmark test-get-roles}
-                       {:name "get-roles, cached"
-                        :setup cached
-                        :benchmark test-get-roles}])
+    (run-benchmarks [{:name "get-roles, no cache"
+                      :setup no-cache
+                      :benchmark test-get-roles}
+                     {:name "get-roles, cached"
+                      :setup cached
+                      :benchmark test-get-roles}])
     (println "cache size" (mm/measure dynamic-roles/dynamic-roles-cache))))
 
 (comment
+  ;; Note: If clj-memory-meter throws InaccessibleObjectException on Java 9+,
+  ;;       you *could* work around it by adding `--add-opens` JVM options, but
+  ;;       the root cause is probably that there is a lazy sequence that could
+  ;;       easily be avoided.
   (benchmark-get-all-applications)
   (benchmark-get-application)
   (benchmark-get-dynamic-roles))
